--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "html-table-to-json": "^1.0.0"
+    "html-table-to-json": "^1.0.0",
+    "mongodb": "^6.5.0"
   }
 }
